--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,9 @@
         {% endblock %}
     </div>
     
+    <!-- jQuery y Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     <script src="{{url_for('static', filename='js/index.js')}}"></script>
 </body>
 
