--- a/app/templates/direcciones.html
+++ b/app/templates/direcciones.html
@@ -32,15 +32,23 @@
       </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12 col-lg-10 offset-lg-1"> <!-- Ajusta el ancho y el offset -->
-          <div class="card" style="height: 400px;"> <!-- Ajusta la altura -->
-            <div class="card-body">
-              <h5 class="card-title">Mis Direcciones</h5>
-              <p>Aquí se mostrarán las direcciones del usuario</p>
-              <a href="{{ url_for('agregar_direccion') }}" class="btn btn-primary">Agregar dirección</a>
-            </div>
-          </div>
+    <div class="col-md-9">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Mis Direcciones</h5>
+          {% for direccion in direcciones %}
+            <p><strong>Calle:</strong> {{ direccion.calle }}</p>
+            <p><strong>Número:</strong> {{ direccion.numero }}</p>
+            <p><strong>Ciudad:</strong> {{ direccion.ciudad }}</p>
+            <p><strong>Estado:</strong> {{ direccion.estado }}</p>
+            <p><strong>País:</strong> {{ direccion.pais }}</p>
+            <p><strong>Código postal:</strong> {{ direccion.codigo_postal }}</p>
+            <a href="{{ url_for('editar_direccion', direccion_id=direccion.id) }}" class="btn btn-primary">Editar dirección</a>
+            <hr>
+          {% endfor %}
+          <a href="{{ url_for('agregar_direccion') }}" class="btn btn-primary">Agregar dirección</a>
         </div>
       </div>
+    </div>
+  </div>
 {% endblock %}
