--- a/app/templates/agregar_tarjeta_credito.html
+++ b/app/templates/agregar_tarjeta_credito.html
@@ -35,6 +35,25 @@
             <div class="card-body">
                 <h5 class="card-title">Agregar tarjeta de crédito</h5>
                 <p>Aquí puedes agregar una nueva tarjeta de crédito</p>
+                <div class="form-group">
+                    <label for="numero_tarjeta">Número de tarjeta</label>
+                    <input type="text" id="numero_tarjeta" class="form-control" placeholder="Ingrese el número de tarjeta">
+                </div>
+                <div class="form-group">
+                    <label for="nombre_tarjeta">Nombre impreso en la tarjeta</label>
+                    <input type="text" id="nombre_tarjeta" class="form-control" placeholder="Ingrese el nombre impreso en la tarjeta">
+                </div>
+                <div class="form-group">
+                    <label for="fecha_vencimiento">Fecha de vencimiento</label>
+                    <input type="month" id="fecha_vencimiento" class="form-control" placeholder="Ingrese la fecha de vencimiento">
+                </div>
+                <div class="form-group">
+                    <label for="codigo_seguridad">Código de seguridad</label>
+                    <input type="text" id="codigo_seguridad" class="form-control" placeholder="Ingrese el código de seguridad">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Agregar Tarjeta</button>
+                </div>
             </div>
         </div>
     </div>
