--- a/app/templates/autentificacion.html
+++ b/app/templates/autentificacion.html
@@ -33,15 +33,16 @@
     </div>
 
     <div class="row">
-      <div class="col-md-12 col-lg-10 offset-lg-1"> <!-- Ajusta el ancho y el offset -->
-        <div class="card" style="height: 400px;"> <!-- Ajusta la altura -->
-          <div class="card-body">
-            <h5 class="card-title">Autentificación</h5>
-            <p>Aquí se mostrarán los datos de autentificación del usuario</p>
-            <div id="current_password_section">
-              <label for="current_password">Contraseña actual:</label>
+      <div class="col-md-12 col-lg-10 offset-lg-1 mb-3">
+        <div class="card border shadow bg-white h-100" style="height: 400px;">
+          <div class="card-body p-4">
+            <h2 class="card-title mb-3">Autentificación</h2>
+            <p class="font-size mb-4">Aquí se mostrarán los datos de autentificación del usuario</p>
+            <div id="current_password_section" class="mb-4">
+              <label for="current_password" class="font-weight-bold">Contraseña actual:</label>
               <input type="password" id="current_password" value="********" disabled class="form-control">
             </div>
+
             <div id="new_password_section" style="display: none;">
               <form action="{{ url_for('modificar_contraseña') }}" method="POST">
                 {{ form.hidden_tag() }} <!-- Agrega el token CSRF -->
@@ -54,12 +55,12 @@
                 <div class="form-group">
                   {{ form.confirmar_contraseña.label }} {{ form.confirmar_contraseña(class_='form-control') }}
                 </div>
-                <div class="form-group">
+                <div class="form-group mt-3">
                   {{ form.submit(class_='btn btn-primary') }}
                 </div>
               </form>
             </div>
-            <a href="#" id="edit_password_btn" class="btn btn-primary">Editar contraseña</a>
+            <a href="#" id="edit_password_btn" class="btn btn-primary text-white">Editar contraseña</a>
           </div>
         </div>
       </div>
@@ -68,7 +69,7 @@
     <script>
       document.getElementById('edit_password_btn').addEventListener('click', function() {
         // Oculta la sección de la contraseña actual
-        document.getElementById('current_password_section').style.display = 'none';
+        document.getElementById('current_password_section').style.display = ' none';
         // Muestra la sección para ingresar la nueva contraseña
         document.getElementById('new_password_section').style.display = 'block';
         this.style.display = 'none'; // Oculta el botón de editar
