--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,161 @@
 {% extends './base.html' %}
 
-{%block contenido%}
-    <p>
-        Bienvenido(a) a esta pagina web
-    </p>
+{% block contenido %}
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center">Bienvenido(a) a nuestra tienda</h1>
+            <p class="text-center">Aquí encontrarás los mejores productos para ti</p>
+        </div>
+    </div>
+    <div class="row mb-4"> <!-- Agregué un margen bottom de 4 unidades para separar el carrusel de los productos -->
+        <div class="col-md-12">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{ url_for('static', filename='img/1280x720.jpg') }}" class="d-block w-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ url_for('static', filename='img/1280x720 (1).jpg') }}" class="d-block w-100 rounded" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ url_for('static', filename='img/1280x720 (2).jpg') }}" class="d-block w-100 rounded" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card m-2"> <!-- Agregué un margen de 2 unidades para separar los productos -->
+                <img src="{{ url_for('static', filename='img/1080x1080.jpg') }}" class="card-img-top rounded" alt="...">
+                <div class="card-body text-center"> <!-- Centré el texto -->
+                    <h5 class="card-title">Producto 1</h5>
+                    <p class="card-text">Descripción del producto 1</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card m-2">
+                <img src="{{ url_for('static', filename='img/1080x1080 (1).jpg') }}" class="card-img-top rounded" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Producto 2</h5>
+                    <p class="card-text">Descripción del producto 2</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card m-2">
+                <img src="{{ url_for('static', filename='img/1080x1080 (2).jpg') }}" class="card-img-top rounded" alt="...">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Producto 3</h5>
+                    <p class="card-text">Descripción del producto 3</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+ <!-- Sección de los más vendidos -->
+<div class="mb-4">
+    <h2 class="text-center">Los más vendidos</h2>
+    <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000.jpg') }}" alt="Imagen 1" class="img-fluid">
+                        </div>
+                        <h5>Producto 1</h5>
+                        <p>Precio: $10.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (1).jpg') }}" alt="Imagen 2" class="img-fluid">
+                        </div>
+                        <h5>Producto 2</h5>
+                        <p>Precio: $9.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (2).jpg') }}" alt="Imagen 3" class="img-fluid">
+                        </div>
+                        <h5>Producto 3</h5>
+                        <p>Precio: $12.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (3).jpg') }}" alt="Imagen 4" class="img-fluid">
+                        </div>
+                        <h5>Producto 4</h5>
+                        <p>Precio: $11.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (4).jpg') }}" alt="Imagen 5" class="img-fluid">
+                        </div>
+                        <h5>Producto 5</h5>
+                        <p>Precio: $10.99</p>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000.jpg') }}" alt="Imagen 6" class="img-fluid">
+                        </div>
+                        <h5>Producto 6</h5>
+                        <p>Precio: $9.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (1).jpg') }}" alt="Imagen 7" class="img-fluid">
+                        </div>
+                        <h5>Producto 7</h5>
+                        <p>Precio: $12.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (2).jpg') }}" alt="Imagen 8" class="img-fluid">
+                        </div>
+                        <h5>Producto 8</h5>
+                        <p>Precio: $11.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (3).jpg') }}" alt="Imagen 9" class="img-fluid">
+                        </div>
+                        <h5>Producto 9</h5>
+                        <p>Precio: $10.99</p>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="image-container">
+                            <img src="{{ url_for('static', filename='img/2000x2000 (4).jpg') }}" alt="Imagen 10" class="img-fluid">
+                        </div>
+                        <h5>Producto 10</h5>
+                        <p>Precio: $9.99</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls2" role="button" data-slide="prev ">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Siguiente</span>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
